--- a/python Basic Assignments/Assignment_4.ipynb
+++ b/python Basic Assignments/Assignment_4.ipynb
@@ -9,12 +9,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de67ebcc",
+   "cell_type": "markdown",
+   "id": "d786ee94",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "    \n",
+    "    [] represents a empty list. a list containing no elements"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,7 +28,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480d3055",
+   "id": "4d79822f",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "    \n",
+    "    **assignment operator '='** can be used to assign a value at any index of a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "86f63d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 'hello', 8, 10]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam = [2,4,6,8,10]\n",
+    "spam[2] = 'hello'\n",
+    "spam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776e8020",
    "metadata": {},
    "source": [
     "Let's pretend the spam includes the list ['a', 'b', 'c', 'd'] for the next three queries."
@@ -34,11 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa6c84e",
+   "execution_count": 4,
+   "id": "4aca9780",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spam = ['a','b','c','d']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,12 +86,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5cb1027",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "    \n",
+    "    int(int('3' * 2) / 11) expression evaluates to 3, so it returns value at index 3."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "275adf9f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam[int(int('3' * 2) / 11)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,12 +125,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46425858",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    '-1' index represents last element of a list. so, it returns 'd'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "652fd686",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam[-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,12 +164,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d233baa9",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    '[:2]' slices the list from starting element to 1st index(slicing omits upper limit i.e.., 2nd index\n",
+    "    \n",
+    "    so, it return ['a','b']"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "75f0fb89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam[:2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,6 +202,16 @@
    "metadata": {},
    "source": [
     "Let's pretend bacon has the list [3.14, 'cat,' 11, 'cat,' True] for the next three questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cd0d2eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bacon = [3.14, 'cat', 11, 'cat', True]"
    ]
   },
   {
@@ -105,12 +223,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b6f9dff",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "  **index** function return the first occurance of the given element if it is present in given list else return -1.\n",
+    "  so, the value will be 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2a366d64",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacon.index('cat')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,12 +263,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "270437de",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "   **append** function adds the given element at the end of list.so, the bacon list becomes\n",
+    "   \n",
+    "   [3.14, 'cat', 11, 'cat', True, 99, 99]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4b604abe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.14, 11, 'cat', True, 99, 99]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "bacon.append(99)\n",
+    "bacon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,12 +306,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "956e3bb0",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "   **remove** function removes the first occurence of the element in the given list. so, the bacon list becomes\n",
+    "   \n",
+    "   [3.14, 11, 'cat', True, 99, 99]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f2394839",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.14, 11, True, 99, 99]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bacon.remove('cat')\n",
+    "bacon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,12 +348,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6ce79cb",
+   "cell_type": "markdown",
+   "id": "f4a3b69b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    1. '+' operator acts as a list concatenation operator which extends 2nd list at the end of 1st list\n",
+    "    2. '*' operator acts as a list replication operator which replicates all elements in the list with given number\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "61c85548",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1,2,3,4] + [5,6,7,8,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a95b0153",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " [1,2,3,4] * 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,12 +410,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "998a5997",
+   "cell_type": "markdown",
+   "id": "3754a89a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    1. 'append()' method adds element at the end of list\n",
+    "    2. 'insert()' method adds element at the given index in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "356819c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,2,3,4]\n",
+    "lst.append(5)\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8edc429c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 9, 4, 5, 3]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.insert(3,9) # insert(index,element)\n",
+    "lst"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,12 +474,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44172daf",
+   "cell_type": "markdown",
+   "id": "830a4aba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "   **pop()** and **remove()**  methods can be used for removing items from list\n",
+    "   \n",
+    "   1. pop() requires index as argument and removes the value at that index and return it\n",
+    "   2. remove() requires element value and removes the first occurance of the value from list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0ae50cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 9, 4, 5, 3]\n",
+      "After using remove method:  [2, 3, 9, 4, 5, 3]\n",
+      "After using pop method:  [2, 3, 4, 5, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lst)\n",
+    "lst.remove(1)\n",
+    "print(\"After using remove method: \",lst)\n",
+    "lst.pop(2)\n",
+    "print(\"After using pop method: \",lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,12 +519,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04f1fbfa",
+   "cell_type": "markdown",
+   "id": "fafdffe6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    Lists are similar to strings, which are collections of characters, except that the elements of a list can have any type and for any one list, the items can be of different types."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,12 +537,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79e2c4e9",
+   "cell_type": "markdown",
+   "id": "5ed29b69",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    The major difference between tuples and lists is that tuples are immutable whereas lists are mutable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,12 +555,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56c44e48",
+   "cell_type": "markdown",
+   "id": "ca6acb3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    If a tuple contains only one value, then a comma should be given after the value to make python interpreter understand that it is a tuple.\n",
+    "    tup = (42,)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "84609a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup = (42,)\n",
+    "type(tup)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,12 +597,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d2bef9f",
+   "cell_type": "markdown",
+   "id": "e2930d45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    We can use casting to convert one datatype to another data type.\n",
+    "    \n",
+    "    1. tuple() is used to get a list value's tuple form.\n",
+    "    2. list() is used to get a tuple value's list form"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,12 +618,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3740dab3",
+   "cell_type": "markdown",
+   "id": "5f73a406",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    Variables contain reference to the list. Python interpreter allocates memmory to the list and stores its address in the varaible but not the actual list itself."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,9 +636,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14eccd7c",
+   "metadata": {},
+   "source": [
+    "Answer:\n",
+    "\n",
+    "    The difference between shallow and deep copying is only relevant for compound objects (list inside a list):\n",
+    "\n",
+    "    1. A shallow copy constructs a new compound object and then inserts references into it to the objects found in the original. If old object is changed, changes reflect in new object too.\n",
+    "    \n",
+    "    2. A deep copy constructs a new compound object and then, recursively, inserts copies into it of the objects found in the original. If old object is changed, changes will not reflect in new object(only old object gets changed)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "349fc13e",
+   "id": "cfcae18a",
    "metadata": {},
    "outputs": [],
    "source": []
