Updated Advance Programming Assignment 2

--- a/Python Programming Advance Assignments/Programming Assignment_2.ipynb
+++ b/Python Programming Advance Assignments/Programming Assignment_2.ipynb
@@ -10,13 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "2a616cec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pentagonal(n):\n",
-    "    pass"
+    "    return (5*n**2 - 5*n + 2) // 2\n",
+    "\n",
+    "pentagonal(8)"
    ]
   },
   {
@@ -95,11 +108,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "0e2fc31f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "def has_friday_13(month,year,day=13):\n",
+    "    dt = date(year,month,day)\n",
+    "    return dt.weekday() == 4\n",
+    "\n",
+    "print(has_friday_13(3, 2020))\n",
+    "print(has_friday_13(10, 2017))\n",
+    "print(has_friday_13(1, 1985))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,11 +143,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "68374cd1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of bad cookies produced everyday are  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "lst = [\"bad cookie\", \"bad cookie\", \"good cookie\", \"bad cookie\", \"good cookie\", \"good cookie\", \"bad cookie\",]\n",
+    "pattern = \"(?<!good)\\scookie\"\n",
+    "\n",
+    "count = len(re.findall(pattern, \", \".join(lst)))\n",
+    "print(\"number of bad cookies produced everyday are \",count)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,8 +174,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "ece2aefd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pig', 'cows'}\n",
+      "{'tables'}\n",
+      "{'arm', 'chair', 'pencil'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inflect package is used to get the plurals for the words.\n",
+    "import inflect\n",
+    "def pluralize(lst):\n",
+    "    p = inflect.engine()\n",
+    "    return set([p.plural(i) if lst.count(i) > 1 else i for i in lst ])\n",
+    "\n",
+    "\n",
+    "print(pluralize([\"cow\", \"pig\", \"cow\", \"cow\"]))\n",
+    "print(pluralize([\"table\", \"table\", \"table\"]))\n",
+    "print(pluralize([\"chair\", \"pencil\", \"arm\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56d5904",
    "metadata": {},
    "outputs": [],
    "source": []
