--- a/test.ipynb
+++ b/test.ipynb
@@ -137,11 +137,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c3f4c3a5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "227b Baker st,London Nw3 6XE7\n",
+      "_#@y yzpVi hg,oLmwlm Md% _cv#\n"
+     ]
+    }
+   ],
+   "source": [
+    "instr = input()\n",
+    "digit = ['_','#', '@', '%']\n",
+    "out = ''\n",
+    "count_alpha = 0\n",
+    "count_digit = 0\n",
+    "for i in range(len(instr)):\n",
+    "    if ord(instr[i]) > 47 and ord(instr[i]) < 58:\n",
+    "        out += digit[count_digit]\n",
+    "        if count_digit == len(digit)-1:\n",
+    "            count_digit = 0\n",
+    "        else:\n",
+    "            count_digit += 1\n",
+    "    elif ord(instr[i]) > 64 and ord(instr[i]) < 91:\n",
+    "        ch = chr(ord('Z') - ord(instr[i]) + ord('A'))\n",
+    "        if (count_alpha+1) % 5 == 0 and count_alpha != 0:\n",
+    "            out += ch.upper()\n",
+    "        else:\n",
+    "            out += ch.lower()\n",
+    "        count_alpha += 1\n",
+    "    elif ord(instr[i]) > 96 and ord(instr[i]) < 123:\n",
+    "        ch = chr(ord('z') - ord(instr[i]) + ord('a'))\n",
+    "        if (count_alpha+1) % 5 == 0 and count_alpha != 0:\n",
+    "            out += ch.upper()\n",
+    "        else:\n",
+    "            out += ch\n",
+    "        count_alpha += 1\n",
+    "    else:\n",
+    "        out += instr[i]\n",
+    "    \n",
+    "print(out)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f72894fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(ord('b')+25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9bb9c5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'J'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(ord('1') + 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51135c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "afec1685",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def spiralOrderTraversal(lst,start_row, start_col, end_row, end_col):\n",
+    "    if(start_row >= end_row or start_col >= end_col):\n",
+    "        return\n",
+    "\n",
+    "    for i in range(start_row,end_co):\n",
+    "        print(A[start_row][i])\n",
+    "\n",
+    "    for i in (start_row+1,end_row):\n",
+    "        print(A[i][end_col-1])\n",
+    "\n",
+    "    if end_row-1 != start_row:\n",
+    "        for i in range(end_col-2,start_col):\n",
+    "          print(A[end_row-1][i])  \n",
+    "\n",
+    "    if end_col-1 != start_col:\n",
+    "        for i in range(end_row-2,start_row):\n",
+    "          print(A[i][start_col])\n",
+    "\n",
+    "    spiralOrderTraversal(A, start_row+1, start_col+1, end_row-1, end_col-1)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7dbbc55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spiralOrderTraversal()"
+   ]
   }
  ],
  "metadata": {
